socklog 1.3.0
Mon, 12 Jan 2004 19:06:56 +0000
  * socklog.c: add getopt-style command line options -r, -R for logging raw
    syslog messages without priority, facility conversion.
  * man/socklog.8: adapt.
  * doc/network.html: document old-style syslog network logging through UDP.
  * doc/index.html: change short description.
  * package/compile, package/install-man, package/upgrade: exit 1 on
    sub-shell failures.

socklog 1.2.0
Sat, 09 Aug 2003 18:08:20 +0200
  * socklog-conf.c: fix run file for socklog-unix service on solaris; use
    runit's chpst instead of setuidgid.
  * doc/install.html: remove obsolete note about setuidgid replacement.
  * doc/examples.html: adapt.
  * doc/index.html: adapt examples.
  * doc/benefits.html: minor.

socklog 1.1.1
Mon, 07 Jul 2003 09:59:08 +0200
  * socklog-conf.c: fix typos (thx Hleil Liu); use mail -s instead of
    mailsubj for the notify service.

socklog 1.1.0
Thu, 19 Jun 2003 15:40:52 +0200
  * man/socklog-conf.8, man/socklog.8, man/tryto.1: typos.
  * doc/benefits.html, doc/configuration.html, doc/examples.html,
    doc/index.html, doc/network.html, doc/notify.html,
    doc/readme.solaris.html, man/socklog-conf.8, man/socklog.8, man/tryto.1,
    man/uncat.1: utilize runit package instead of daemontools package.
  * socklog-conf.c: create service directories for the use with the runit
    package.

socklog 1.0.0
Thu, 30 Jan 2003 13:32:24 +0100
  * doc/configuration.html, doc/examples.html: remove description for
    socklog-ucspi-unix service.
  * doc/benefits.html, doc/network.html, doc/readme.solaris.html,
    doc/usedietlibc.html, man/socklog-conf.8: typos.
  * error.h: include <errno.h>.
  * tryto.c: catch possible error in write() to child; minor cleanup.
  * doc/index.html: add NetBSD to supported systems.

socklog 0.10.1
Thu, 08 Aug 2002 22:55:35 +0200
  * package/versions: new.
  * doc/network.html: typos.
  * doc/usedietlibc.html: fix path to conf-cc, conf-ld.

socklog 0.10.0
Thu, 18 Jul 2002 15:45:58 +0200