@@ -1,3 +1,11 @@
+  * trysocketlib.c: new; check for libraries needed for socket() on some
+    systems (solaris, thx Uffe Jakobsen).
+  * Makefile: adapt.
+  * socklog.c, socklog-conf.c: add defines automatically detecting solaris
+    systems; now builds on solaris out-of-the-box (thx Uffe Jakobsen, Lars
+    Uffmann).
+  * doc/readme.solaris.html: adapt (thx Lars Uffmann).
+
 socklog 1.3.0
 Mon, 12 Jan 2004 19:06:56 +0000
   * socklog.c: add getopt-style command line options -r, -R for logging raw
